# grafana-matrix-alerting

./: .dockerignore  LICENSE  README.md
docker/: .env.example  Dockerfile  docker-compose.yml
relay/: .env.example  pyproject.toml
relay/grafana_matrix_alerting/: __main__.py
